# Quake-III-Arena

./: .gitignore  ADVANCED_MOVEMENT.md  BUILD.md  CMakeLists.txt  GETTING_STARTED.md  MODERNIZATION.md  MULTIPLAYER_AND_PROCEDURAL.md  RTX_REMIX_GUIDE.md
code/botlib/: be_aas_route.c
code/cgame/: CMakeLists.txt
code/game/: CMakeLists.txt  bg_movement.c  bg_movement.h  bg_pmove.c  bg_public.h  g_arena_gen.c  g_arena_gen.h  g_local.h  g_main.c  g_svcmds.c  q_shared.h
code/qcommon/: common_compat.c
code/ui/: CMakeLists.txt
code/unix/: linux_qgl.c  unix_main.c
